# cube

./: .gitignore  CMakeLists.txt  TODO  build_script  readme.md  release-notes.txt
.github/workflows/: release.yml
app/: CMakeLists.txt  cli.cpp
cmake/: CubeConfig.cmake.in  cube.pc.in
include/cube/: libcube.h
python/: .gitignore  pyproject.toml  setup.py  test_cube.py
python/cube_ctypes/: _lib.py  exceptions.py
python/pycube/: __init__.py  _libpath
python/test/: test_cube.py
scripts/: build.sh  build_android.sh  build_libcube.sh  pack_jscube.sh  pack_pycube.sh
src/: CMakeLists.txt  coord.cpp  coord.hh  cube.cpp  cube.hh  def.h  help.hpp  libcube.cpp  table.cpp  table.hh  twophase.cpp  twophase.hh  utils.hpp
test/: CMakeLists.txt  cube_test.cpp  libcube_test.cpp
wasm/: package-lock.json  package.json  test_cube.html  test_cube.js  tsconfig.json
wasm/emscripten/: Makefile  cube_wasm.cpp
wasm/jscube/: cube_wasm.cpp  makefile
wasm/src/: api.mts  index.mts
wasm/src/shims/: emscripten.d.ts
wasm/test/: test_jscube-node.1.mjs  test_jscube-web.1.html  test_jscube-web.2.html
